--- a/taller-procesamiento.ipynb
+++ b/taller-procesamiento.ipynb
@@ -9,6 +9,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "95aeb377",
+   "metadata": {},
+   "source": [
+    "## Luis David Montiel Montes / FICHA - 2501259"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "0f3274c6-ff4d-47d6-a9be-12796b440eee",
